[gd_scene load_steps=29 format=3 uid="uid://dyuceth1stk3r"]

[ext_resource type="Texture2D" uid="uid://ct1ch7wuxki5t" path="res://enemies/Boss/Sprite Sheets/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" id="1_bjnbw"]
[ext_resource type="Script" path="res://enemies/Boss/scripts/golem_boss.gd" id="1_lfxpg"]
[ext_resource type="Texture2D" uid="uid://k7470vniuyif" path="res://enemies/Boss/Sprite Sheets/Mecha-stone Golem 0.1/weapon PNG/Laser_sheet.png" id="2_xmrk6"]
[ext_resource type="PackedScene" uid="uid://dfpr3654pjjnx" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="3_weuba"]
[ext_resource type="Script" path="res://enemies/Boss/scripts/states/idle.gd" id="4_kqcjf"]
[ext_resource type="Script" path="res://enemies/Boss/scripts/states/boss_state_machine.gd" id="4_nbdev"]
[ext_resource type="Script" path="res://enemies/Boss/scripts/states/follow.gd" id="5_ovhtl"]
[ext_resource type="Script" path="res://enemies/Boss/scripts/states/melee_attack.gd" id="7_8iwkt"]
[ext_resource type="Script" path="res://enemies/Boss/scripts/states/laser_beam.gd" id="10_7naow"]
[ext_resource type="Script" path="res://enemies/Boss/scripts/states/death.gd" id="10_uqrn4"]
[ext_resource type="PackedScene" uid="uid://qdby4xo3xo6" path="res://GeneralNodes/HitBox/hit_box.tscn" id="11_txg17"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8h1sj"]
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fljjf"]
size = Vector2(249, 8.75)

[sub_resource type="Animation" id="Animation_ti780"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Sprite2D/HurtBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ba2h7"]
resource_name = "armor_buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.125),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_78u1s"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_adsmw"]
resource_name = "boss_slained"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_6vmdi"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nb6ax"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fhjad"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1sfff"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 14, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D/HurtBox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.875),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_aspei"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n6u4b"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fti2e"]
resource_name = "ranged_attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dq6i4"]
_data = {
"RESET": SubResource("Animation_ti780"),
"armor_buff": SubResource("Animation_ba2h7"),
"block": SubResource("Animation_78u1s"),
"boss_slained": SubResource("Animation_adsmw"),
"death": SubResource("Animation_6vmdi"),
"glowing": SubResource("Animation_nb6ax"),
"idle": SubResource("Animation_fhjad"),
"laser": SubResource("Animation_1sfff"),
"laser_cast": SubResource("Animation_aspei"),
"melee_attack": SubResource("Animation_n6u4b"),
"ranged_attack": SubResource("Animation_fti2e")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_50jo4"]
radius = 11.0
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8uak5"]
radius = 120.333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kywl3"]
radius = 23.0
height = 50.0

[node name="GolemBoss" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 16
script = ExtResource("1_lfxpg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bjnbw")
hframes = 10
vframes = 10

[node name="HurtBox" parent="Sprite2D" instance=ExtResource("3_weuba")]
position = Vector2(0, 1)
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
shape = SubResource("CapsuleShape2D_8h1sj")
debug_color = Color(0.819872, 0.029249, 0.261719, 0.921)

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(2, -17)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(98, 17)
texture = ExtResource("2_xmrk6")
vframes = 15

[node name="HurtBox" parent="Pivot/Sprite2D" instance=ExtResource("3_weuba")]
position = Vector2(-98, -17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Sprite2D/HurtBox"]
position = Vector2(122, 1)
shape = SubResource("RectangleShape2D_fljjf")
debug_color = Color(0.966197, 8.66354e-07, 0.482028, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dq6i4")
}
autoplay = "idle"

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
custom_minimum_size = Vector2(200, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -27.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 0
max_value = 30.0
value = 30.0

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -41.0
offset_right = 8.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Stone Golem"

[node name="Label" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Boss Slained"

[node name="debug" type="Label" parent="."]
offset_left = -23.0
offset_top = -43.0
offset_right = 26.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 8
text = "debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_50jo4")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_8uak5")

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("4_nbdev")

[node name="Idle" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_kqcjf")

[node name="Follow" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_ovhtl")

[node name="MeleeAttack" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_8iwkt")

[node name="LaserBeam" type="Node" parent="FiniteStateMachine"]
script = ExtResource("10_7naow")

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource("10_uqrn4")

[node name="HitBox" parent="." instance=ExtResource("11_txg17")]
position = Vector2(0, 1)
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_kywl3")
debug_color = Color(0.655872, 0.5157, 0.0840454, 0.42)

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
